# spock

./: .functions  .gitignore  COMPARISON  COMPARISONS.md  Cargo.toml  README.md  STD_LIB.md  build.rs  build.sh  example.compute  foo.txt  install.sh  liblib.dylib  merged.profdata  other.spock  pgo.profdata  test.compute  test.spock
.cargo/: config.toml
.github/workflows/: build-artifacts.yml  release.yml
docs/: COMPARISONS.md  FS_LIB.md  STD_LIB.md
legacy_src/: main.rs  preprocess.rs
legacy_src/functions/: builtin.rs  namespaces.rs
legacy_src/parser/: parser.rs
legacy_src/types/: file.rs
src/: ast.rs  benchmark.rs  builtin_funcs.rs  data.rs  display.rs  draft.txt  functions.rs  grammar.lalrpop  instr.rs  instr_set.rs  main.rs  namespaces.rs  operations.rs  ops.rs  optimizations.rs  parser.rs  parser_functions.rs  parser_grammar.lalrpop  parser_grammar.pest  preprocess.rs  process.rs  tests.rs  type_inference.rs  type_system.rs  types.rs  util.rs
src/functions/: builtin.rs  namespaces.rs
src/legacy/: instr_set.rs  main.rs  util.rs
src/legacy/functions/: builtin.rs  namespaces.rs
src/legacy/parser/: compute_grammar.pest  functions.rs  parser.rs
src/legacy/types/: array.rs  file.rs  float.rs  string.rs
src/operations/: float.rs  integer.rs
src/parser/: compute_grammar.pest  functions.rs  grammar.lalrpop  method_calls.rs  optimizations.rs  parser.rs  parser_data.rs  parser_functions.rs  parser_grammar.pest
src/parser/functions/: functions.rs  method_calls.rs
src/types/: array.rs  file.rs  float.rs  integer.rs  string.rs  type_inference.rs  types.rs
src/util/: display.rs  errors.rs  util.rs
src/vm/: array_gc.rs  string_gc.rs  vm.rs
