[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[dependencies]
#bincode = "1.3.3"
#serde = { version = "1.0.215", features = ["derive"] }
#blake3 = "1.5.5"
###libloading = "0.8.6"
###goblin = "0.9.2"
internment = { version = "0.8.6" }
colored = "3.0.0"
concat-string = "1.0.1"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.22.0"

[profile.dev]
panic = 'abort'
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
strip = true
debug-assertions = false

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
strip = true

[profile.debugrelease]
inherits = "release"
lto = true
strip = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = false
panic = "abort"
rpath = true

[profile.debugrelease.package."*"]
opt-level = 3
debug = 2
codegen-units = 1
