[package]
name = "spock"
version = "0.1.0"
edition = "2024"

[dependencies]
internment = { version = "0.8.6" }
colored = "3.0.0"
concat-string = "1.0.1"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
inline_colorization = "0.1.6"
likely_stable = "0.1.3"
cached = "0.55.1"

[build-dependencies]
lalrpop = "0.22.1"

[profile.dev]
panic = 'abort'
debug-assertions = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
strip = true
debug-assertions = false
incremental = true

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
strip = true

[profile.debugrelease]
inherits = "release"
lto = true
strip = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = false
panic = "abort"
rpath = true

[profile.debugrelease.package."*"]
opt-level = 3
debug = 2
codegen-units = 1
