[package]
name = "spock"
version = "0.1.0"
edition = "2024"

[dependencies]
concat-string = "1.0.1"
lalrpop-util = { version = "0.23.1", features = ["lexer"] }
inline_colorization = "0.1.6"
ariadne = "0.6.0"
libloading = "0.9.0"
libffi = "5.1.0"
smol_str = "0.3.6"
mimalloc = "0.1.48"

[build-dependencies]
lalrpop = "0.23.1"

[profile.opt]
inherits = "dev"
opt-level = 1
lto = "thin"
debug = false
strip = true
debug-assertions = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
strip = true
debug-assertions = false
incremental = true

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
strip = true

[profile.debugrelease]
inherits = "release"
lto = true
strip = false
codegen-units = 1
opt-level = 3
debug = 2
debug-assertions = false
panic = "abort"
rpath = true

[profile.debugrelease.package."*"]
opt-level = 3
debug = 2
codegen-units = 1
